Add description for strategic dominance and nash equilibrium

--- a/GT_Proj_Fundamentals.ipynb
+++ b/GT_Proj_Fundamentals.ipynb
@@ -127,8 +127,61 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
-   "source": []
+   "metadata": {
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   },
+   "source": [
+    "<div dir='rtl'>\n",
+    "\n",
+    " <font face='XB Zar' size='4'>\n",
+    "    استراتژی‌های غالب\n",
+    " </font>\n",
+    "<br>\n",
+    " <font face='XB Zar' size='3'>\n",
+    "    <p align='justify'>\n",
+    "    مثال زندانیان قسمت قبل را در نظر بگیرید. با فرض اینکه زندانیان عاقل هستند، پس گزینهٔ خیانت را انتخاب می‌کنند. بنابراین زندانی دوم باید روشی پیش بگیرد مستقل از اینکه زندانی اول کدام روش را پیش گرفته تا بیشترین منفعت برایش باشد.\n",
+    "    </p>\n",
+    "    <p align='justify'>\n",
+    "    طبق نظر بالا پس دو زندانی استراتژی (خیانت،خیانت) را انتخاب می‌کنند. طبق این مثال، می‌توانیم تعریف کنیم در هر بازی دو نفره به فرم استاندارد، استراتژی اس‌پریم‍۱ بازیکن اول\n",
+    "    <b> مغلوب </b>\n",
+    "    استراتژی اس‌‍۱ بازیکن اول است در صورتی که به ازای هر استراتژی اس۲ که بازیکن دوم پیش گیرد، منفعت اس۱ از اس‌پریم۱ بیشتر باشد.\n",
+    "    </p>\n",
+    "    <p>\n",
+    "    اکنون اگر بخواهیم با نماد گذاری پیش رویم خواهیم داشت:\n",
+    "    توضیحات ریاضی\n",
+    "    </p>\n",
+    " </font>\n",
+    "\n",
+    "</div>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "<div dir='rtl'>\n",
+    "\n",
+    " <font face='XB Zar' size='4'>\n",
+    "    تعادل نش\n",
+    " </font>\n",
+    "<br>\n",
+    " <font face='XB Zar' size='3'>\n",
+    "    <p align='justify'>\n",
+    "همانطور که در قسمت قبل صحبت کردیم، استراتژی غالب هر بازیکن وابسته به استراتژی بازیکنان دیگر است. اکنون نقطه‌ای را در نظر بگیرید که در آن بازیکنان دیگر تمایل به تغییر استراتژی خود نداشته باشند. به این نقطهٔ تعادل،\n",
+    "<b> نقطهٔ تعادل نش </b>\n",
+    "گفته می‌شود.\n",
+    "    </p>\n",
+    "    <p align='justify'>\n",
+    "        توضیحات و مثال\n",
+    "    </p>\n",
+    " </font>\n",
+    "\n",
+    "</div>\n"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
   }
  ],
  "metadata": {
