Add examples for nash and dominance.

--- a/GT_Proj_Fundamentals.ipynb
+++ b/GT_Proj_Fundamentals.ipynb
@@ -133,58 +133,183 @@
     }
    },
    "source": [
-    "<div dir='rtl'>\n",
-    "\n",
-    " <font face='XB Zar' size='4'>\n",
-    "    استراتژی‌های غالب\n",
-    " </font>\n",
-    "<br>\n",
-    " <font face='XB Zar' size='3'>\n",
-    "    <p align='justify'>\n",
-    "    مثال زندانیان قسمت قبل را در نظر بگیرید. با فرض اینکه زندانیان عاقل هستند، پس گزینهٔ خیانت را انتخاب می‌کنند. بنابراین زندانی دوم باید روشی پیش بگیرد مستقل از اینکه زندانی اول کدام روش را پیش گرفته تا بیشترین منفعت برایش باشد.\n",
-    "    </p>\n",
-    "    <p align='justify'>\n",
-    "    طبق نظر بالا پس دو زندانی استراتژی (خیانت،خیانت) را انتخاب می‌کنند. طبق این مثال، می‌توانیم تعریف کنیم در هر بازی دو نفره به فرم استاندارد، استراتژی اس‌پریم‍۱ بازیکن اول\n",
-    "    <b> مغلوب </b>\n",
-    "    استراتژی اس‌‍۱ بازیکن اول است در صورتی که به ازای هر استراتژی اس۲ که بازیکن دوم پیش گیرد، منفعت اس۱ از اس‌پریم۱ بیشتر باشد.\n",
-    "    </p>\n",
-    "    <p>\n",
-    "    اکنون اگر بخواهیم با نماد گذاری پیش رویم خواهیم داشت:\n",
-    "    توضیحات ریاضی\n",
-    "    </p>\n",
-    " </font>\n",
-    "\n",
+    "<div style=\"direction:rtl\">\n",
+    "    <font face='XB Zar' size='7'>\n",
+    "        استراتژی‌های غالب\n",
+    "        <br>\n",
+    "        <font size='6'>تعریف</font>\n",
+    "        <font size='5'>\n",
+    "            <p align='justify'></p>\n",
+    "                مثال زندانیان قسمت قبل را در نظر بگیرید. با فرض اینکه زندانیان عاقل هستند، پس گزینهٔ خیانت را انتخاب می‌کنند. بنابراین زندانی دوم باید روشی پیش بگیرد مستقل از اینکه زندانی اول کدام روش را پیش گرفته تا بیشترین منفعت برایش باشد.\n",
+    "            <p align='justify'></p>\n",
+    "                طبق نظر بالا پس دو زندانی استراتژی (خیانت،خیانت) را انتخاب می‌کنند. طبق این مثال، می‌توانیم تعریف کنیم در هر بازی دو نفره به فرم استاندارد، استراتژی ${s_1}^\\prime$ بازیکن اول <b> مغلوب </b> استراتژی $s_1$ بازیکن اول است در صورتی که به ازای هر استراتژی $s_2$ که بازیکن دوم پیش گیرد، منفعت $s_1$ از ${s_1}^\\prime$ بیشتر باشد.\n",
+    "            <p></p>\n",
+    "                اکنون اگر بخواهیم با نماد گذاری پیش رویم خواهیم داشت:\n",
+    "                $$ S=(s_1,...,s_{i-1},s_i,s_{i+1},...,s_n) $$\n",
+    "                اگر فرض کنیم بازیکن iام استراتژی $s_i$ را انتخاب کرده استراتژی‌های دیگر بازیکنان را تعریف می‌کنیم\n",
+    "                $$S_{-i}=(s_1,...,s_{i-1},s_{i+1},...,s_n)$$\n",
+    "                طبق این نمادگذاری اکنون تعریف استراتژی غالب (و ضعیف غالب در حالت تساوی) $s_i$ بر ${s_i}^\\prime$ می‌شود:\n",
+    "                $$ U_i(s_i,s_{-i}) \\ge U_i({s_i}^\\prime,s_{-i}) $$\n",
+    "        </font>\n",
+    "        <font size='6'>حذف استراتژی مغلوب</font>\n",
+    "        <font size='5'>\n",
+    "            <div style=\"direction:ltr;border:1px solid;border-collapse:collapse;\">\n",
+    "                <table style=\"width:100%;align:center;\">\n",
+    "                    <caption>ماتریس منفعت</caption>\n",
+    "                    <tr>\n",
+    "                        <th>1|2</th>\n",
+    "                        <th>L</th>\n",
+    "                        <th>C</th>\n",
+    "                        <th>R</th>\n",
+    "                    </tr>\n",
+    "                    <tr>\n",
+    "                        <th>U</th>\n",
+    "                        <td>(3,1)</td>\n",
+    "                        <td>(0,1)</td>\n",
+    "                        <td>(0,0)</td>\n",
+    "                    </tr>\n",
+    "                    <tr>\n",
+    "                        <th>M</th>\n",
+    "                        <td>(1,1)</td>\n",
+    "                        <td>(1,1)</td>\n",
+    "                        <td>(5,0)</td>\n",
+    "                    </tr>\n",
+    "                    <tr>\n",
+    "                        <th>D</th>\n",
+    "                        <td>(0,1)</td>\n",
+    "                        <td>(4,1)</td>\n",
+    "                        <td>(0,0)</td>\n",
+    "                    </tr>\n",
+    "                </table>\n",
+    "            </div>\n",
+    "            در مثال بالا، استراتژی C بر R غالب بازیکن دوم است چون\n",
+    "            $$ \\forall s_1 \\in \\{U,M,D\\} : U_2(s_1, C) > U_2(s_1,R)$$\n",
+    "            پس با فرض اینکه بازیکن اول نیز عاقل باشد ستون R را می‌توان از استراتژی‌ها حذف کرد. اگر توجه کنید درخواهید یافت که با این توصیفات، از نظر منفعت، انتخاب استراتژی L یا C برای بازیکن دوم تفاوتی ندارد. اما ممکن است بازیکن اول یک استراتژی ترکیبی استفاده کند. برای مثال فرض کنید که یک استراتژی ترکیبی از U و D، روش اتخاذ شده توسط بازیکن اول باشد.\n",
+    "            <div style=\"direction:ltr;border:1px solid;border-collapse:collapse;\">\n",
+    "                <table style=\"width:100%;align:center;\">\n",
+    "                    <tr>\n",
+    "                        <th>1|2</th>\n",
+    "                        <th>L</th>\n",
+    "                        <th>C</th>\n",
+    "                    </tr>\n",
+    "                    <tr>\n",
+    "                        <th>1/2U+1/2D</th>\n",
+    "                        <td>(1.5,1)</td>\n",
+    "                        <td>(2,1)</td>\n",
+    "                    </tr>\n",
+    "                    <tr>\n",
+    "                        <th>U</th>\n",
+    "                        <td>(3,1)</td>\n",
+    "                        <td>(0,1)</td>\n",
+    "                    </tr>\n",
+    "                    <tr>\n",
+    "                        <th>M</th>\n",
+    "                        <td>(1,1)</td>\n",
+    "                        <td>(1,1)</td>\n",
+    "                    </tr>\n",
+    "                    <tr>\n",
+    "                        <th>D</th>\n",
+    "                        <td>(0,1)</td>\n",
+    "                        <td>(4,1)</td>\n",
+    "                    </tr>\n",
+    "                </table>\n",
+    "            </div>\n",
+    "            اکنون چون یک استراتژی ترکیبی وجود دارد از U و D که بر استراتژی محض M غلبه کند پس می‌توان جدول منفعت را به صورت زیر خلاصه کرد\n",
+    "            <div style=\"direction:ltr;border:1px solid;border-collapse:collapse;\">\n",
+    "                <table style=\"width:100%;\">\n",
+    "                    <tr>\n",
+    "                        <th sytle=\"text-align:center;\">1|2</th>\n",
+    "                        <th sytle=\"text-align:center;\">L</th>\n",
+    "                        <th sytle=\"text-align:center;\">C</th>\n",
+    "                    </tr>\n",
+    "                    <tr>\n",
+    "                        <th>U</th>\n",
+    "                        <td>(3,1)</td>\n",
+    "                        <td>(0,1)</td>\n",
+    "                    </tr>\n",
+    "                    <tr>\n",
+    "                        <th>D</th>\n",
+    "                        <td>(0,1)</td>\n",
+    "                        <td>(4,1)</td>\n",
+    "                    </tr>\n",
+    "                </table>\n",
+    "            </div>            \n",
+    "        </font>        \n",
+    "     </font>\n",
     "</div>"
    ]
   },
   {
    "cell_type": "markdown",
-   "source": [
-    "<div dir='rtl'>\n",
-    "\n",
-    " <font face='XB Zar' size='4'>\n",
-    "    تعادل نش\n",
-    " </font>\n",
-    "<br>\n",
-    " <font face='XB Zar' size='3'>\n",
-    "    <p align='justify'>\n",
-    "همانطور که در قسمت قبل صحبت کردیم، استراتژی غالب هر بازیکن وابسته به استراتژی بازیکنان دیگر است. اکنون نقطه‌ای را در نظر بگیرید که در آن بازیکنان دیگر تمایل به تغییر استراتژی خود نداشته باشند. به این نقطهٔ تعادل،\n",
-    "<b> نقطهٔ تعادل نش </b>\n",
-    "گفته می‌شود.\n",
-    "    </p>\n",
-    "    <p align='justify'>\n",
-    "        توضیحات و مثال\n",
-    "    </p>\n",
-    " </font>\n",
-    "\n",
-    "</div>\n"
-   ],
    "metadata": {
-    "collapsed": false,
     "pycharm": {
      "name": "#%% md\n"
     }
-   }
+   },
+   "source": [
+    "<div style=\"direction:rtl;\">\n",
+    "    <font face='XB Zar' size='7'>\n",
+    "        تعادل نش\n",
+    "        <br>\n",
+    "        <font size='6'>تعریف</font>\n",
+    "        <br>\n",
+    "        <font size='5'>\n",
+    "            <p align='justify'></p>\n",
+    "        همانطور که در قسمت قبل صحبت کردیم، استراتژی غالب هر بازیکن وابسته به استراتژی بازیکنان دیگر است. اکنون نقطه‌ای را در نظر بگیرید که در آن بازیکنان دیگر تمایل به تغییر استراتژی خود نداشته باشند. به این نقطهٔ تعادل،\n",
+    "                <b> نقطهٔ تعادل نش </b>\n",
+    "گفته می‌شود.\n",
+    "        </font>\n",
+    "        <br>\n",
+    "        <font size='6'>بهترین پاسخ</font>\n",
+    "        <br>\n",
+    "        <font size='5'>\n",
+    "            <p align='justify'></p>\n",
+    "            فرض کنید G یک بازی نرمال باشد و بازیکنان مجموعهٔ $ I=\\{1,...,n\\} $ باشند. می‌خواهیم مفهومی به نام  <b>بهترین پاسخ</b> تعریف کنیم که آن را به صورت زیر نشان می‌دهیم\n",
+    "            $$ B_i(s_{-i}) $$\n",
+    "            مفهوم بهترین پاسخ یعنی اگر حریفان عاقل استراتژی $ s_{-i} $ را انتخاب کنند بهترین روش بازی بازیکن iام چیست؟\n",
+    "            <br>\n",
+    "            به مثال زیر توجه کنید\n",
+    "            <div style=\"direction:ltr;border:1px solid;border-collapse:collapse;\">\n",
+    "                <table style=\"width:100%;align:center;\">\n",
+    "                    <caption>ماتریس منفعت</caption>\n",
+    "                    <tr>\n",
+    "                        <th>1|2</th>\n",
+    "                        <th>L</th>\n",
+    "                        <th>C</th>\n",
+    "                        <th>R</th>\n",
+    "                    </tr>\n",
+    "                    <tr>\n",
+    "                        <th>U</th>\n",
+    "                        <td>(1,0)</td>\n",
+    "                        <td>(1,2)</td>\n",
+    "                        <td>(0,2)</td>\n",
+    "                    </tr>\n",
+    "                    <tr>\n",
+    "                        <th>D</th>\n",
+    "                        <td>(0,3)</td>\n",
+    "                        <td>(0,1)</td>\n",
+    "                        <td>(2,0)</td>\n",
+    "                    </tr>\n",
+    "                </table>\n",
+    "            </div>          \n",
+    "            می‌توانیم بهترین پاسخ‌ها را از آن استخراج کنیم:\n",
+    "            <br>\n",
+    "            $ B_1(L)=U $ &nbsp;&nbsp; $ B_1(C)=U $ &nbsp;&nbsp; $ B_1(R)=D $\n",
+    "            <br>\n",
+    "            $ B_2(U)=\\{C,R\\} $ &nbsp;&nbsp; $ B_2(D)=L $\n",
+    "            <br>\n",
+    "            اگر نیک بنگرید متوجه خواهید شد که پروفایل بازی (U,M) نقطهٔ تعادل بازی است. چون در این حالت هیچ کدام پشیمان نخواهند شد.\n",
+    "        </font>\n",
+    "    </font>\n",
+    "</div>\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -203,9 +328,9 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.5"
+   "version": "3.8.6"
   }
  },
  "nbformat": 4,
- "nbformat_minor": 2
+ "nbformat_minor": 4
 }
