Add examples for nash and dominance.

--- a/GT_Proj_Fundamentals.ipynb
+++ b/GT_Proj_Fundamentals.ipynb
@@ -236,10 +236,25 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   },
    "source": [
     "Your answers Here"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "https://www.investopedia.com/terms/g/gametheory.asp\n",
+    "\n",
+    "https://www.economicsdiscussion.net/game-theory/5-types-of-games-in-game-theory-with-diagram/3827"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
   },
   {
    "cell_type": "markdown",
