--- a/LP.ipynb
+++ b/LP.ipynb
@@ -85,7 +85,7 @@
     "            <p align='justify'></p>\n",
     "    حالت دیگری نیز از مسائل برنامه ریزی خطی وجود دارد که به جای ماکسیمم کردن تابع خطی هدف، تابع هدف را مینیمم میکنیم . در این حالت نیز تعدادی شرط داریم که باید برقرار باشند . رویکرد هندسی که در قسمت بیان کردیم را در این قسمت نیز میتوان به طور مشابه داشت. راه حل ها برای حل مسائل برای این حالت نیز درست هستند.\n",
     "    <br>\n",
-    "    حالت کلی این مسائل به این صورت است:"
+    "    حالت کلی این مسائل مینیمم سازی به این صورت است:"
    ]
   },
   {
@@ -103,14 +103,19 @@
     "<font size='4'><b>ِDual</b></font>\n",
     "    <br>\n",
     "    <font size='4'>\n",
-    "    dual هر مسئبه ی برنامه ریزی خطی خودش یک مسئبه ی برنامه ریزی خطی است. شکل زیر dual برنامه خطی شکل بالا می باشد"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "<img src=\"Capture6.png\" alt=\"drawing\" style=\"width:600px;\"/>"
+    "    برای هر مسئله ی برنامه ریزی خطی یک dual تعریف میکنیم که برابر است با. dual یا همان دوگان را به این صورت تعریف میکنیم :\n",
+    "        <br>\n",
+    "        برای مسئله ی ماکسیمم سازی زیر :\n",
+    "        <br>\n",
+    "        $\\text{maximize } c^Tx $ <br>\n",
+    "        $\\text{subject to the constraint:} Ax\\le b \\text{ and } x\\ge0$\n",
+    "        <br>\n",
+    "        دوگان را به این صورت تغریف میکنیم :\n",
+    "        <br>\n",
+    "        $\\text{minimize } y^Tb $ <br>\n",
+    "        $\\text{subject to the constraint:} y^TA\\ge c^T \\text{ and } y\\ge0$\n",
+    "        <br>\n",
+    "        برعکسش هم برقرار است یعنی dual مسئله ی مینیمم سازی مسئبه ی ماکسیمم سازی می باشد."
    ]
   },
   {
@@ -214,7 +219,18 @@
     "<font size='4'>\n",
     "    <p align='justify'></p>\n",
     "    پس طبق قضیه کمینه بیشینه (Von Neumann) میتوانیم با استفاده از حل مسائل برنامه ریزی خطی بالا به ازای هر مسئله ی zero-sum نقطه تعادل نش را پیدا کنیم.\n",
-    "    یک نکته ی جالب درباره ی بازی کمینه بیشینه این است که مسئله ی مینیمم سازی نفر دوم و ماکسیمم سازی نفر اول dual یکدیگرند !"
+    "    "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<div style=\"direction:rtl;line-height:200%;\">\n",
+    "<font size='4'><b>ِرویکردی دیگر به بازی های zero sum</b></font>\n",
+    "    <br>\n",
+    "    <font size='4'>\n",
+    "        نکته ای که راجع به استراتژی های نفر اول و دوم وجود دارد که مسئله ی برنامه ریزی خطی را برای آن ها نوشتیم این است که این دو مسئله دوگان یکدیگرند. و خب این یک نتیجه ای به ما "
    ]
   },
   {
@@ -225,7 +241,7 @@
     "    <font face='XB Zar' size=4><b>مثال</b></font>\n",
     "    <font face='XB Zar' size =4>\n",
     "        <br>\n",
-    "        بازی سنگ کاغد قیچی دو نفره را در نظر بگیرید که در آن 2 نفر به طور همزمان یکی از حرکت های سنگ،کاغذ یا قیچی را بازی میکنند. فرض کنید در صورت کسی که برنده میشود 1 دلار از حریف اش میگیرد و در صورت مساوی شدن اتفاقی نمی افتند . نقطه تعادل بازی را با استفاده از نوشتن برنامه ریزی های خطی برای هر دو نفر و حل این مسائل به روش هندسی ( ترسیمی ) حل کنید ."
+    "        بازی سنگ کاغد قیچی دو نفره را در نظر بگیرید که در آن 2 نفر به طور همزمان یکی از حرکت های سنگ،کاغذ یا قیچی را بازی میکنند. فرض کنید در صورت کسی که برنده میشود 1 دلار از حریف اش میگیرد و در صورت مساوی شدن اتفاقی نمی افتند . نقطه تعادل بازی را با استفاده از نوشتن برنامه ریزی های خطی برای هر دو نفر و حل این مسائل به رویکرد هندسی حل کنید ."
    ]
   }
  ],
