--- a/GT_proj_Nash.ipynb
+++ b/GT_proj_Nash.ipynb
@@ -8,16 +8,10 @@
     }
    },
    "source": [
-    "<div style=\"direction:rtl;text-align:justify\">\n",
-    "    <font face='XB Zar' size='7'>\n",
-    "        استراتژی‌های غالب\n",
-    "        <br>\n",
-    "        <font size='5'>\n",
     "<div style=\"direction:rtl;line-height:200%;\">\n",
     "    <font face='XB Zar' size='5'>\n",
     "        <b>استراتژی‌های غالب</b>\n",
     "        <br>\n",
-    "        <font size='4'><b>تعریف</b></font>\n",
     "        <font size='4'>\n",
     "            <p align='justify'></p>\n",
     "                مثال زندانیان قسمت قبل را در نظر بگیرید. با فرض اینکه زندانیان عاقل هستند، طبق ماتریس منفعت درمی‌یابیم که گزینهٔ خیانت را انتخاب می‌کنند. بنابراین زندانی دوم باید روشی پیش بگیرد مستقل از اینکه زندانی اول کدام روش را پیش گرفته تا بیشترین منفعت برایش باشد.\n",
@@ -32,6 +26,7 @@
     "                $$ U_i(s_i,s_{-i}) \\ge U_i({s_i}^\\prime,s_{-i}) $$\n",
     "        </font>\n",
     "        <font size='4'><b>حذف استراتژی مغلوب</b></font>\n",
+    "        <br>\n",
     "        <font size='4'>\n",
     "            <div style=\"direction:ltr;border:1px solid;border-collapse:collapse;\">\n",
     "                <table style=\"width:100%;align:center;\">\n",
@@ -62,9 +57,11 @@
     "                    </tr>\n",
     "                </table>\n",
     "            </div>\n",
+    "            <br>\n",
     "            در مثال بالا، استراتژی C بر R غالب بازیکن دوم است چون\n",
     "            $$ \\forall s_1 \\in \\{U,M,D\\} : U_2(s_1, C) > U_2(s_1,R)$$\n",
     "            پس با فرض اینکه بازیکن اول نیز عاقل باشد ستون R را می‌توان از استراتژی‌ها حذف کرد. اگر توجه کنید درخواهید یافت که با این توصیفات، از نظر منفعت، انتخاب استراتژی L یا C برای بازیکن دوم تفاوتی ندارد. اما ممکن است بازیکن اول یک استراتژی ترکیبی استفاده کند. برای مثال فرض کنید که یک استراتژی ترکیبی از U و D، روش اتخاذ شده توسط بازیکن اول باشد.\n",
+    "            <br>\n",
     "            <div style=\"direction:ltr;border:1px solid;border-collapse:collapse;\">\n",
     "                <table style=\"width:100%;align:center;\">\n",
     "                    <tr>\n",
@@ -113,10 +110,7 @@
     "                        <td>(4,1)</td>\n",
     "                    </tr>\n",
     "                </table>\n",
-    "            </div>            \n",
-    "        </font>        \n",
-    "     </font>\n",
-    "</div>"
+    "            </div>            "
    ]
   },
   {
@@ -127,16 +121,9 @@
     }
    },
    "source": [
-    "<div style=\"direction:rtl;text-align:justify\">\n",
-    "    <font face='XB Zar' size='7'>\n",
-    "        تعادل نش\n",
-    "        <br>\n",
-    "        <font size='5'>\n",
     "<div style=\"direction:rtl;line-height:200%;\">\n",
     "    <font face='XB Zar' size='5'>\n",
     "        <b> تعادل نش</b>\n",
-    "        <br>\n",
-    "        <font size='4'><b>تعریف</b></font>\n",
     "        <br>\n",
     "        <font size='4'>\n",
     "            <p align='justify'></p>\n",
@@ -182,23 +169,20 @@
     "            $ B_2(U)=\\{C,R\\} $ &nbsp;&nbsp; $ B_2(D)=L $\n",
     "            <br>\n",
     "            اگر نیک بنگرید متوجه خواهید شد که پروفایل بازی (U,C) نقطهٔ تعادل بازی است. چون در این حالت هیچ کدام پشیمان نخواهند شد.\n",
-    "            <br>\n",
-    "        </font>\n",
-    "    </font>\n",
-    "</div>\n"
+    "            <br>"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<div style=\"direction:rtl;text-align:justify\">\n",
-    "    <font size='6' face='XB Zar'>\n",
+    "<div style=\"direction:rtl;text-align:justify;line-height:200%;\">\n",
+    "    <font size='4' face='XB Zar'>\n",
     "        <p></p>\n",
-    "        تعریف.\n",
+    "        <b>تعریف تعادل نش</b>\n",
     "    </font>\n",
     "    <br>\n",
-    "    <font size='5' face='XB Zar'>\n",
+    "    <font size='4' face='XB Zar'>\n",
     "        <p></p>\n",
     "        پروفایل استراتژی $(s_1, s_2, ..., s_n) $ یک تعادل نش است اگر و تنها اگر $ s_i \\in B_i(s_{-i}) $ \n",
     "   </font>\n",
@@ -209,8 +193,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<div style=\"direction:rtl;text-align:justify\">\n",
-    "    <font size='5' face='XB Zar'>\n",
+    "<div style=\"direction:rtl;text-align:justify;line-height:200%;\">\n",
+    "    <font size='4' face='XB Zar'>\n",
     "        <p></p>\n",
     "            اکنون جدول منفعت زیر را درنظر گرفته و به سوالات پاسخ دهید.\n",
     "        <br>\n",
@@ -256,8 +240,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<div style=\"direction:rtl;text-align:justify\">\n",
-    "    <font size='5' face='XB Zar'>\n",
+    "<div style=\"direction:rtl;text-align:justify;line-height:200%;\">\n",
+    "    <font size='4' face='XB Zar'>\n",
     "        <p></p>\n",
     "                آیا پروفایل (D,L) یک تعادل نش است؟ چرا؟\n",
     "    </font>\n",
@@ -267,14 +251,16 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "<font color=\"light-blue\">Your answers Here</font>"
+   ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<div style=\"direction:rtl;text-align:justify\">\n",
-    "    <font size='5' face='XB Zar'>\n",
+    "<div style=\"direction:rtl;text-align:justify;line-height:200%;\">\n",
+    "    <font size='4' face='XB Zar'>\n",
     "        <p></p>\n",
     "                آیا پروفایل (M,C) یک تعادل نش است؟ چرا؟\n",
     "    </font>\n",
@@ -284,20 +270,17 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "<font color=\"light-blue\">Your answers Here</font>"
+   ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<div style=\"direction:rtl;\">\n",
-    "    <font face='XB Zar' size='7'>\n",
-    "        قضیه‌ی کمینه و بیشینه\n",
     "<div style=\"direction:rtl;line-height:200%;\">\n",
     "    <font face='XB Zar' size='5'>\n",
     "       <b> قضیه‌ی کمینه و بیشینه</b>\n",
-    "        <br>\n",
-    "        <font size='4'><b>تعریف</b></font>\n",
     "        <br>\n",
     "        <font size='4'>\n",
     "            <p align='justify'></p>\n",
@@ -305,6 +288,7 @@
     "        </font>\n",
     "        <br>\n",
     "        <font size='5'>\n",
+    "            <br>\n",
     "            <div style=\"direction:ltr;border:1px solid;border-collapse:collapse;\">\n",
     "                <table style=\"width:100%;align:center;\">\n",
     "                    <caption>ماتریس منفعت</caption>\n",
@@ -324,10 +308,7 @@
     "                        <td>-10</td>\n",
     "                    </tr>\n",
     "                </table>\n",
-    "            </div>          \n",
-    "        </font>\n",
-    "    </font>\n",
-    "</div>\n"
+    "            </div>                  "
    ]
   },
   {
