--- a/GT_Proj_Fundamentals.ipynb
+++ b/GT_Proj_Fundamentals.ipynb
@@ -72,6 +72,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "\n",
+    "\n",
     "<div style=\"direction:rtl;text-align:justify;line-height:200%\">\n",
     "    <font face='XB Zar' size=5>\n",
     "    <b>تعریف بازی\n",
@@ -80,66 +82,55 @@
     "    </font>\n",
     "    <font face='XB Zar' size=4>\n",
     "        انواع مختلفی از بازی‌ها وجود دارد که هر یک تعریف مربوط به خود را دارند.\n",
-    "        در نتیجه تعریف ارائه شده در اینجا ممکن است با سایر تعاریف اختلاف جزئی داشته باشد.\n",
-    "        یک بازی شامل مجموعه‌ای از بازیکنان، مجموعه‌ای از حرکت‌ها یا راهبردها و نتیجهٔ مشخصی برای هر ترکیب از راه بردها می‌باشد. پیروزی در هر بازی تنها تابع شانس نیست بلکه اصول و قوانینِ ویژه‌ی خود را دارد و هر بازیکن در طی بازی سعی می‌کند با بکارگیری آن اصول، خود را به برد نزدیک کند.\n",
+    "              یک بازی شامل مجموعه‌ای از بازیکنان، مجموعه‌ای از حرکت‌ها یا راهبردها و نتیجهٔ مشخصی برای هر ترکیب از راه بردها می‌باشد. پیروزی در هر بازی تنها تابع شانس نیست بلکه اصول و قوانینِ ویژه‌ی خود را دارد و هر بازیکن در طی بازی سعی می‌کند با بکارگیری آن اصول، خود را به برد نزدیک کند.\n",
     "        <br>\n",
     "        یک بازی از عناصر زیر تشکیل شده است:\n",
     "        <ul>\n",
     "            <li>تعدادی بازیکن </li>\n",
     "            <li> اعمال (action)‌\n",
-    "                هایی که هر بازیکن می‌تواند انجام دهد </li>\n",
+    "                هایی که هر بازیکن می‌تواند انتخاب کند </li>\n",
     "            <li>اولویت‌ها و ترجیحات (preferences)\n",
-    "                هر عمل انجام شده </li>\n",
+    "                هر عمل انتخاب شده </li>\n",
     "            <li>اطلاعاتی که برای هر بازیکن آشکار و در دسترس است.</li>\n",
     "        </ul>\n",
-    "          <a href=\"https://eetripp.expressions.syr.edu/wp-content/uploads/2015/08/finalpresentation.pdf\">بازی</a>\n",
+    "        <br>\n",
+    "        در اینجا به معرفی بازی هایی خواهیم پرداخت که در آن بازیکن های به طور همزمان و بدون آگاهی\n",
+    "از انتخاب دیگر بازیکن ها، در مورد عملکرد خود تصمیم می گیرند.\n",
+    "               فرض می کنیم که قاعدۀ بازی شامل لیست بازیکنان، مجموعه انتخاب های هر بازیکن و منفعت حاصل\n",
+    "از هر پروفایلی از انتخاب بازیکن ها برای هر بازیکن برای همۀ بازیکن ها به صورت آگاهی عمومی می باشد. این\n",
+    ".دسته از بازی ها را بازی های ایستا می نامند\n",
+    "        <br>\n",
+    "            <a href=\"https://eetripp.expressions.syr.edu/wp-content/uploads/2015/08/finalpresentation.pdf\">بازی ایستا</a>\n",
     "         را به صورت \n",
-    "    <br>\n",
-    "    <b>G = (N,A,u)</b>\n",
+    "           <b>G = (N,A,u)</b>\n",
     "    تعریف می‌کنیم به طوری که \n",
-    "    <br>\n",
-    "   N = {1,2, .. n}\n",
-    "    <br>\n",
-    "    مجموعه شرکت کنندگان (players) در بازی است،\n",
-    "    <br>\n",
-    "    A=$\\prod$i∈NAi\n",
-    "    <br>\n",
-    "    مجموعه عملیات‌(actions)هاست و \n",
+    "    <ul>\n",
+    "        <li>  N = {1,2, .. n} مجموعه بازیکن‌ها است.\n",
+    "         <li>   A=$\\prod$i∈NAi\n",
+    "       مجموعه پروفایل عملیات‌(actions)هاست و \n",
     "    Ai\n",
-    "    عملیات های بازیکن i را نشان می‌دهد و\n",
-    "    <br>\n",
-    "    u=$\\prod$i∈N ui:A→R\n",
-    "    <br>\n",
-    "    تابع مطلوبیت (utility) است که ترجیحات(preferences) هر عملیات را به ازای هر بازیکن در بر دارد.\n",
+    "    عملیات های بازیکن i را نشان می‌دهد.\n",
+    "         <li>   u=$\\prod$i∈N ui:A→R\n",
+    "       تابع مطلوبیت (utility) است که ترجیحات(preferences) هر عملیات را به ازای هر بازیکن در بر دارد.\n",
     "    این ترجیحات می‌توانند به صورت نفع یا سود حاصل از آن عملیات خاص تفسیر شوند.\n",
-    "     هر بازیکن به دنبال بیشینه کردن مقدار تابع مطلوبیت خود است.\n",
+    "     هر بازیکن به دنبال بیشینه کردن مقدار تابع مطلوبیت خود است. \n",
+    "        </ul>\n",
     "    <br>\n",
-    "    <br>\n",
-    "    <b>استراتژی: </b>\n",
-    "            استراتژی برای هر بازیکن روش تصمیم‌گیری او را برای انجام عملیات‌ها نشان می‌دهد. استراتژی‌ها به دو نوع تقسیم می‌شوند:\n",
+    "      <b>استراتژی: </b>\n",
+    "             به تصمیم یا عکس‌العمل یک بازیکن در بازی استراتژی  بازیکن گفته می‌شود. استراتژی‌ها به دو نوع تقسیم می‌شوند:\n",
     "        <ul>\n",
     "            <li>استراتژی خالص (pure strategy)\n",
-    "            که حرکت یا actionی\n",
-    "                را که هر بازیکن در هر موقعیت انجام می‌دهد را نشان می‌دهد.\n",
+    "            عملی است که  بازیکن انتخاب می کند. \n",
     "            بازیکنی که تنها از استراتژی خالص استفاده می‌کند، رفتار تصادفی از خود نشان نمی‌دهد.\n",
     "            </li>\n",
-    "            <li>استراتژی مختلط (mixed strategy)\n",
-    "            که اختصاص یک احتمال به هر یک از استراتژی‌های خالص توسط بازیکن است.\n",
-    "            اگر استراتژی مختلط بازیکن i\n",
-    "                را si در نظر بگیریم\n",
-    "                و هر یک از عملیات‌های این کاربر را یک استراتژی خالص در نظر بگیریم\n",
-    "            (ai)\n",
-    "                بازیکن با استراتژی مختلط یک توزیع احتمالی روی عملیات‌های آن بازیکن است.\n",
-    "            si(ai) را احتمال اجرا شدن استراتژی خالص \n",
-    "                ai در استراتژی مختلط si و\n",
-    "            ui(ai) را مقدار مطلوبیت استراتژی خالص ai در استراتژی مختلط si تعریف می‌کنیم.\n",
+    "            <li>اگر بازیکن تمایل داشته باشد که انتخاب تصادفی از بین انتخابهای در دسترس ( عمل ها)   را بازی کند، این استراتژی را استراتژی ترکیبی (mixed strategy)\n",
+    "                نامند. استراتژی ترکیبی یک تابع توزیع روی مجموعه استراتژی‌های خالص است. \n",
     "            </li>\n",
     "        </ul>\n",
     "    <br>\n",
     "    <b>ماتریس utility:</b>\n",
-    "    به ماتریسی گفته می‌شود که مقدار مطلوبیت (utility) هر بازیکن را به ازای عملیات انجام شده نشان می‌دهد.\n",
-    " به این ماتریس، ماتریس payoff نیز گفته می‌شود.\n",
-    "        </font>\n",
+    "                اگر تعداد استراتژیهای هر بازیکن در بازی متناهی باشد آنگاه مقدار مطلوبیت هر بازیکن به ازای استراتژی پروفایل  انتخابی توسط بازیکن‌ها قابل نمایش با ماتریس است که آن را ماتریس مطلوبیت نامند.\n",
+    "               </font>\n",
     "</div>"
    ]
   },
@@ -167,18 +158,17 @@
     "        و هر بازیکن می‌تواند یکی از سه عمل سنگ، کاغذ و یا قیچی را اجرا کند.\n",
     "        <br>\n",
     "        <div style=\"direction:ltr\"> A = {R, P, S} * {R, P, S} = {(RR), (RP), (RS), (PR), .. }.</div>\n",
-    "        مقادیر تابع مطلوبیت نیز در ماتریس بالا به ازای هر عملیات نشان داده‌شده است.\n",
+    "        مقادیر تابع مطلوبیت نیز در ماتریس بالا به ازای هر پروفایلی از استراتژیها نشان داده‌شده است.\n",
     "        <br>\n",
-    "        در این بازی می‌توان انجام هر یک از سه عمل را یک استراتژی خالص در نظر گرفت و \n",
-    "        برای این دو بازیکن ممکن است استراتژی انجام رندوم هر یک از استراتژی‌های خالص (سه عمل سنگ، کاغذ و قیچی) به احتمال مساوی باشد که در این صورت به ازای هر i و \n",
-    "        ai مقدار\n",
-    "        si(ai) = 1/3\n",
-    "        خواهد شد.\n",
-    "        <br><br>\n",
+    "        در این بازی، ممکن است بازیکن $i$ یکی از  سه  استراتژی خالص به طور قطعی انتخاب کند و یا  \n",
+    "        ممکن است استراتژی، انتخاب تصادفی هر یک از استراتژی‌های خالص (سه عمل سنگ، کاغذ و قیچی) به احتمال مساوی باشد که در این صورت استراتژی بازیکن تابع توزیع $s_i:\\{R, P, S\\} \\to \\mathbb{R}$\n",
+    "        به طوریکه\n",
+    "        $s_i(R) =s_i(P) =s_i(S) = \\frac{1}{3}$.\n",
+    "             <br><br>\n",
     "        بازی سنگ کاغذ قیچی نمونه‌ای از بازی\n",
     "        <b>مجموع صفر</b> \n",
     "        (zero sum games)\n",
-    "        است، به این معنا که در هر بازی تنها یکی از بازیکنان برنده خواهد شد. به معنای دیگر سود یک بازیکن زیان دیگری است و بالعکس.\n",
+    "        است، به این معنا که  سود یک بازیکن زیان دیگری است و بالعکس.\n",
     "        ماتریس زیر ماتریس utility بازی سنگ کاغذ قیچی با در نظر گرفتن این ویژگی است:\n",
     "    </font>\n",
     "</div>"
