fonts added and nash updated

--- a/GT_proj_Nash.ipynb
+++ b/GT_proj_Nash.ipynb
@@ -14,17 +14,64 @@
     "        <br>\n",
     "        <font size='4'>\n",
     "            <p align='justify'></p>\n",
-    "                مثال زندانیان قسمت قبل را در نظر بگیرید. با فرض اینکه زندانیان عاقل هستند، طبق ماتریس منفعت درمی‌یابیم که گزینهٔ خیانت را انتخاب می‌کنند. بنابراین زندانی دوم باید روشی پیش بگیرد مستقل از اینکه زندانی اول کدام روش را پیش گرفته تا بیشترین منفعت برایش باشد.\n",
+    "            اگر به ماتریس منفعت بازی دو راهی زندانی نگاه کنید درمی یابید که فارغ از اینکه استراتژی متهم دوم چه باشد،\n",
+    "بهترین گزینه برای متهم اول خیانت کردن است. به عبارت دیگر، استراتژی اعتراف اکیداً بر استراتژی سکوت\n",
+    "غلبه می کند. چون بازیکن اول عاقل است پس استراتژی سکوت را انتخاب نمی کند. از طرفی چون بازیکن دوم\n",
+    "می داند که بازیکن اول عاقل است پس استدلال می کند که بازیکن اول استراتژی سکوت را انتخاب نمی کند.\n",
+    "شرایط مشابهی برای بازیکن دوم حاکم است. لذا دو بازیکن عاقل در تعامل با یکدیگر در این بازی پروفایل (خیانت، خیانت)\n",
+    "را بازی خواهند کرد.\n",
     "            <p align='justify'></p>\n",
-    "                پس دو زندانی استراتژی (خیانت،خیانت) را انتخاب می‌کنند. طبق این مثال، می‌توانیم تعریف کنیم در هر بازی دو نفره به فرم استاندارد، استراتژی ${s_1}^\\prime$ بازیکن اول <b> مغلوب </b> استراتژی $s_1$ بازیکن اول است در صورتی که به ازای هر استراتژی $s_2$ که بازیکن دوم پیش گیرد، منفعت $s_1$ از ${s_1}^\\prime$ بیشتر باشد.\n",
+    "                پس دو زندانی استراتژی (خیانت،خیانت) را انتخاب می‌کنند. به طور کلی می‌توانیم تعریف کنیم در هر بازی دو نفره به فرم استاندارد، استراتژی ${s_1}^\\prime$ بازیکن اول <b> مغلوب </b> استراتژی $s_1$ بازیکن اول است در صورتی که به ازای هر استراتژی $s_2$ که بازیکن دوم پیش گیرد، منفعت $s_1$ از ${s_1}^\\prime$ بیشتر باشد.\n",
     "            <p></p>\n",
     "                اکنون اگر بخواهیم با نماد گذاری پیش رویم خواهیم داشت:\n",
-    "                $$ S=(s_1,...,s_{i-1},s_i,s_{i+1},...,s_n) $$\n",
+    "                $$ s=(s_1,...,s_{i-1},s_i,s_{i+1},...,s_n) $$\n",
     "                اگر فرض کنیم بازیکن iام استراتژی $s_i$ را انتخاب کرده استراتژی‌های دیگر بازیکنان را تعریف می‌کنیم\n",
-    "                $$S_{-i}=(s_1,...,s_{i-1},s_{i+1},...,s_n)$$\n",
-    "                طبق این نمادگذاری اکنون تعریف استراتژی غالب (و ضعیف غالب در حالت تساوی) $s_i$ بر ${s_i}^\\prime$ می‌شود:\n",
-    "                $$ U_i(s_i,s_{-i}) \\ge U_i({s_i}^\\prime,s_{-i}) $$\n",
-    "        </font>\n",
+    "                $$s_{-i}=(s_1,...,s_{i-1},s_{i+1},...,s_n)$$\n",
+    "                لذا \n",
+    " \\(s=(s_i,s_{-i})\\) \n",
+    " است.  فرض کنید \n",
+    " \\(s_i\\) \n",
+    " و \n",
+    " \\(s'_i\\)\n",
+    " دو استراتژی بازیکن \n",
+    " \\(i\\)اُم باشد آنگاه:\n",
+    " می‌گوییم استراتژی \n",
+    " \\(s_i\\) \n",
+    " بر استراتژي \n",
+    " \\(s'_i\\) \n",
+    " اکیداً غالب است اگر به‌ازای هر استراتژی پروفایل رقبا \n",
+    " \\(i\\)، \n",
+    "مانند \n",
+    " \\(s_{-i}\\)، \n",
+    " داشته باشیم:\n",
+    " \\[U_i(s_i,s_{-i})>U_i(s'_i,s_{-i}).\\]\n",
+    " می‌گوییم که استراتژی \n",
+    " \\(s_i\\) \n",
+    " بر استراتژی \n",
+    " \\(s'_i\\) \n",
+    " به‌طور ضعیف غالب است اگر به‌ازای هر استراتژی پروفایل برای رقبا \n",
+    " \\(i\\)، \n",
+    " یعنی \n",
+    " \\(s_{-i}\\)، \n",
+    " داشته باشیم:\n",
+    "\\[U_i(s_i,s_{-i})\\geq U_i(s'_i,s_{-i}).\\]\n",
+    " و همچنین برای حداقل یک استراتژی \n",
+    " \\(s_{-i}\\)، \n",
+    " داشته باشیم که \n",
+    "\\[U_i(s_i,s_{-i})\\geq U_i(s'_i,s_{-i}).\\] \n",
+    "می‌گوییم که استراتژی \n",
+    " \\(s_i\\) \n",
+    " بر استراتژي \n",
+    " \\(s'_i\\) \n",
+    " به‌طور بسیار ضعیف غالب است اگر و تنها اگر به‌ازای هر استراتژی پروفایل برای رقبا \n",
+    " \\(i\\)، یعنی \\(s_{-i}\\)، \n",
+    " داشته باشیم:\n",
+    " \\[U_i(s_i,s_{-i})\\geq U_i(s'_i,s_{-i}).\\]\n",
+    " ر ادامه، مثالی ارائه می‌شود که در آن با تکنیک حذف استراتژی های مغلوب سعی می‌کنیم مجموعه استراتژی بازیکن‌ها را پالایش کنیم. این تکنیک، تکنیکی است که به‌طور معمول در تصمیم‌گیری‌های روزمره از آن استفاده می‌شود.  \n",
+    " فرض کنید بازی به فرم نرمال (بازی ایستا)، در قالب ماتریس زیر ارائه شده است.\n",
+    " با استفاده از حذف استراتژی مغلوب مسئله را تحلیل می‌کنیم.\n",
+    "  <br>\n",
+    "                         </font>\n",
     "        <font size='4'><b>حذف استراتژی مغلوب</b></font>\n",
     "        <br>\n",
     "        <font size='4'>\n",
@@ -127,7 +174,10 @@
     "        <br>\n",
     "        <font size='4'>\n",
     "            <p align='justify'></p>\n",
-    "        همانطور که در قسمت قبل صحبت کردیم، استراتژی غالب هر بازیکن وابسته به استراتژی بازیکنان دیگر است. به عبارتی تعادل در نقطه‌ای رخ می‌دهد که هیچ‌یک از بازیکنان تمایلی به تغییر استراتژی خود نداشته باشند. اگر بازیکنی عاقل باشد، استراتژی خود را به گونه‌ای می‌چیند که پس از مشاهده‌ی شیوه‌ی عملکرد دیگران در انتهای بازی، پشیمان نشود.\n",
+    "        در تعاملات بازیکن ها، منفعت حاصل از انتخاب یک بازیکن به انتخاب دیگر بازیکن ها نیز بستگی دارد.\n",
+    "بنابراین بازی منعکسکنندۀ رفتار جمعی بازیکن هااست بنابراین تعادل در نقطه ای رخ می دهد که بازیکن ها تمایل\n",
+    "به تغییر استراتژی در آن را نداشته باشند. \n",
+    "            اگر بازیکنی عاقل باشد، استراتژی خود را به گونه‌ای می‌چیند که پس از مشاهده‌ی شیوه‌ی عملکرد دیگران در انتهای بازی، پشیمان نشود. به عبارت  دیگر، ادم عاقل کاری نمی‌کند که پشیمان شود.\n",
     "        </font>\n",
     "        <br>\n",
     "        <font size='4'><b>بهترین پاسخ</b></font>\n",
@@ -284,7 +334,25 @@
     "        <br>\n",
     "        <font size='4'>\n",
     "            <p align='justify'></p>\n",
-    "            ماتریس منفعت زیر را در نظر بگیرید. اکنون فرض کنید هر بازیکن دنبال ترکیبی از استراتژی‌هاست تا به تعادل نش برسد. درحقیقت شما باید یک ترکیب خطی بهینه (با مجموع ضرایب ۱) از استراتژی‌ها بیابید. در این بخش شما می‌بایست با استفاده از کتاب‌خانه‌ی `numpy` نقطه‌ی تعادل را پیدا کنید. به عبارتی در کجا نه بازیکن اول و نه بازیکن دوم تمایلی به تغییر استراتژی خود ندارند. فرض کنید مقادیر داده شده سود بازیکن دوم است. \n",
+    "        استراتژی \n",
+    "            maxmin\n",
+    "            بازیکن \n",
+    "            $i$ ام \n",
+    "            استراتژی است که پیامد بدترین حالت بازیکن\n",
+    "             $i$  را حداکثر کند. به عبارت دیگر در وضعیتی که رقبا استراتژی پروفایلی را بازی می کنند که منجر به کمینه شدن سود  یا پیامد این بازیکن می شود، بازیکن مورد نظر استرارتژی را انتخاب مند که در مقابل سودش بیشینه شود.\n",
+    "              استراتژی maxmin  استراتژی\n",
+    "              بنابراین \n",
+    "             <br>$$\\arg \\max_{s_i}\\min_{s_{-i}}u_i(s_i,s_{-i}).$$\n",
+    "                      <br>\n",
+    "             در بازیهای دو نفره، استراتژی \n",
+    "             minmax\n",
+    "            $i$ بازیکن             استراتژی است که پیامد یا سود حداکثری رقبا را در حداقل نگه می دارد.\n",
+    "            به عبارت دیگر\n",
+    "            استراتژی minmax برای بازیکن $i$ عبارت است از\n",
+    "            <br>\n",
+    "           $$ \\arg \\min_{s_i}\\max_{s_{-i}} u_{-i}(s_i,s_{-i})$$\n",
+    "           <br>\n",
+    "                         ماتریس منفعت زیر را در نظر بگیرید. اکنون فرض کنید هر بازیکن دنبال ترکیبی از استراتژی‌هاست تا به تعادل نش برسد. درحقیقت شما باید یک ترکیب خطی بهینه (با مجموع ضرایب ۱) از استراتژی‌ها بیابید. در این بخش شما می‌بایست با استفاده از کتاب‌خانه‌ی `numpy` نقطه‌ی تعادل را پیدا کنید. به عبارتی در کجا نه بازیکن اول و نه بازیکن دوم تمایلی به تغییر استراتژی خود ندارند. فرض کنید مقادیر داده شده سود بازیکن دوم است. \n",
     "        </font>\n",
     "        <br>\n",
     "        <font size='5'>\n",
@@ -313,7 +381,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {
     "jupyter": {
      "outputs_hidden": false
@@ -407,13 +475,25 @@
     "<div style=\"direction:rtl;line-height:200%;\">\n",
     "        <font size='4' face='XB Zar'>\n",
     "            <p align='justify'></p>\n",
-    "             فون‌نویمن ثابت کرده است که کمینه‌ی بیشینه‌ها به هر شیوه با بیشینه‌ی کمینه‌ها به هر شیوه برابر است. به عبارتی \n",
+    "             فون‌نویمن ثابت کرده است که در بازیهای دو نفره با مجموع صفر، کمینه‌ی بیشینه‌ها به هر شیوه با بیشینه‌ی کمینه‌ها به هر شیوه برابر است. به عبارتی \n",
     "            $$ max(min(yAx)) = min(max(yAx)) $$\n",
-    "            این قضیه به قضیه <b> بیشینه کمینه </b> معروف است\n",
-    "        </font>\n",
-    "        <br>\n",
+    "            این قضیه به قضیه <b> بیشینه کمینه </b> .معروف است\n",
+    "              استراتژی های \n",
+    "        minmax و maxmin و تعادل نش در بازیهای دو نفره با مجموع صفر بر هم منطبق هستند.\n",
+    "                 تعادلهاي نش در بازيهاي با مجموع صفر را ميتوان به صورت گرافيكي به شكل يك زين (saddle) در\n",
+    "فضاي چندبعدي ديد. در نقطه زيني، هر انحراف بازیکن، منفعت او را كاهش داده و منفعت بازیکن رقیب را\n",
+    "افزايش ميدهد. \n",
+    "   </font>\n",
+    " <br>\n",
     "</div>"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
